--- a/package.json
+++ b/package.json
@@ -7,5 +7,5 @@
 	"devDependencies": {
         "tmp":	"0.0.23"
 	},
-	"homepage": "https://github.com/thnew/Pdf2Png"
+	"homepage": "https://github.com/thnew/pdf_page_count"
 }
