--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name":			"pdf_page_count",
-	"version":		"1.0.1",
+	"version":		"1.0.3",
 	"description":	"Takes a PDF-document and returns the amount of pages in it",
 	"engine":		"node >= 0.6.0",
-	"main":			"./lib/pdf2png.js",
+	"main":			"./lib/pdfPageCount.js",
 	"devDependencies": {
         "tmp":	"0.0.23"
 	},
